added image alt text

--- a/financial-aid.html
+++ b/financial-aid.html
@@ -60,7 +60,7 @@
             </div>
         </header>
 
-        <img src="students.jpeg" class="img-fluid mb-4">
+        <img src="students2.jpeg" alt="four college students smiling at the camera holding their books" class="img-fluid mb-4">
 
         <h1 class="article-header">FINANCIAL AID ELIGIBILITY</h1>
         <h5><b>Financial aid can help make your education more affordable.</b></h5>
