--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </header>
 
-        <img src="college.jpg" class="img-fluid mb-4">
+        <img src="college.jpg" alt="A domed college building from the University of Virginia Campus" class="img-fluid mb-4">
 
         <div class="row mb-4"> 
             <div class="col">
