--- a/major-selection.html
+++ b/major-selection.html
@@ -59,7 +59,7 @@
             </div>
         </header>
 
-        <img src="students.jpeg" class="img-fluid mb-4">
+        <img src="students.jpeg" alt="An image depicting three college students sitting with their bags and books. one works on a laptop" class="img-fluid mb-4">
 
         <h1 class="article-header">SELECTING YOUR MAJOR</h1>
         <h5><b>Choosing a major is one of the most important decisions you'll make during your academic journey.</b>
